--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-pdf": "^6.7.5",
     "react-native-safe-area-context": "^4.11.1",
     "react-native-screens": "^3.34.0",
     "react-navigation": "^4.4.4",
