--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-blob-util": "^0.19.11",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-pdf": "^6.7.5",
     "react-native-safe-area-context": "^4.11.1",
