--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.75.4",
     "react-native-blob-util": "^0.19.11",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-htmlview": "^0.17.0",
     "react-native-pdf": "^6.7.5",
     "react-native-safe-area-context": "^4.11.1",
     "react-native-screens": "^3.34.0",
@@ -32,6 +33,7 @@
     "@react-native/metro-config": "0.75.4",
     "@react-native/typescript-config": "0.75.4",
     "@types/react": "^18.2.6",
+    "@types/react-native-htmlview": "^0.16.5",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
