--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-blob-util": "^0.19.11",
+    "react-native-collapsible": "^1.6.2",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-htmlview": "^0.17.0",
     "react-native-pdf": "^6.7.5",
